# platform

./: .clang-format  .gitignore  .gitmodules  .gn  BUILD.gn  README.txt  gendb.sh  main.c  platform_bus.c  platform_bus.h
embeded/rootfs/: BUILD.gn  rootfs.S
embeded/rootfs/etc/: post.rs  rc.conf  start.rs
embeded/rtems/: BUILD.gn  main.c  net0.c  ram0.c  shell.c  shell_mem.c  shell_misc.c
embeded/rtems/bsps/arm/am437x_idk_evm/: BUILD.gn  am437x-idk-evm.dtb  am43xx.c  args.gn  clock.c  clock_am43xx.c  console.c  edma.c  gpio.c  gpio_keys.c  i2c.c  pinctrl.c  platform_resource.c  spi.c  timers.c  tpic2810.c
embeded/rtems/bsps/arm/am437x_idk_evm/bsd/: BUILD.gn  ti_scm.c  ti_sdhci.c
embeded/rtems/bsps/arm/am437x_idk_evm/bsd/cpsw/: if_cpsw.c
embeded/rtems/bsps/arm/am437x_idk_evm/include/: diskconf.h  netconf.h  platform.h  shellconf.h  sysconf.h
embeded/rtems/bsps/arm/am437x_idk_evm/include/asm/: io.h  netconf.h  (+3 more)
embeded/rtems/bsps/arm/dts/: am437x-idk-pru-excl-uio.dts  stm32h743.dtsi  stm32h750-art-pi.dts  stm32h750i-art-pi.dts
embeded/rtems/bsps/arm/include/: barriers.h  cmsis_cortexm.h  cortexm_dwt.h  cortexm_trace.h  io.h  stacktrace.h  unwind.h
embeded/rtems/bsps/arm/shared/: BUILD.gn  fatal.c  stacktrace.c  unwind.c
embeded/rtems/bsps/arm/shared/cmsis/: BUILD.gn
embeded/rtems/bsps/arm/shared/cortexm/: BUILD.gn  cortexm_dwt.c  cortexm_fault.c  cortexm_trace.c  fault.S
embeded/rtems/bsps/arm/shared/hal_stm32/: BUILD.gn
embeded/rtems/bsps/arm/shared/lib/: BUILD.gn  bitops.h  changebit.S  clearbit.S  memcpy.S  memset.S  setbit.S
embeded/rtems/bsps/arm/shared/wind/: BUILD.gn  unwarm.c  unwarm.h  unwarm_arm.c  unwarm_portable.c  unwarm_thumb.c  unwarminder.c  unwarmmem.c  unwarmmem.h
embeded/rtems/bsps/arm/stm32f4/: BUILD.gn  stm32_clock.c  stm32_dma.c  stm32_dma_v1.c  stm32_gpio.c  stm32_platform.c
embeded/rtems/bsps/arm/stm32h750-art-pi/: BUILD.gn  flash_w25q128.c  gpio-keys.c  stm32_queue.c  stm32h7.c  stm32h750-art-pi.c  stm32h750-art-pi.dtb  stm32h7_clk.c  stm32h7_com.c  stm32h7_dma.c  stm32h7_dma_v1.c  stm32h7_dmamux.c  stm32h7_dtb.S  stm32h7_gpio.c  stm32h7_i2c.c  stm32h7_leds.c  stm32h7_pinctrl.c  stm32h7_sdmmc.c  stm32h7_sdram.c  stm32h7_spi.c  stm32h7_spi_linux.c  stm32h7_uart.c
embeded/rtems/bsps/arm/stm32h750-art-pi/bsd/: keys.c  stm32h7_mac.c  stm32h7_sdmmc.c  stm32h7_stdio.c
embeded/rtems/bsps/patch/empty/: bspempty.c
embeded/rtems/bsps/shared/: BUILD.gn  devbase.c  dma.c  mdma.c  ofw_clock.c  ofw_dma.c  ofw_extension.c  ofw_gpios.c  ofw_platform_bus.c  ofw_platform_bus.h  ofw_root_bus.c  platform_bus.c  vdma.c
embeded/rtems/bsps/shared/devfs/: dev_led.c  devfs_led.c
embeded/rtems/bsps/shared/mmc/: BUILD.gn  mmc.c  mmc_bridge.h  mmc_ops.c  mmc_ops.h  mmc_private.h  mmc_sd.c  mmcbrvar.h  mmcreg.h  mmcsd.c  sdhci.c
embeded/rtems/component/: BUILD.gn  callpath.c  ccinit.cc  ccinit.h  cinit.h  compiler_stack_protect.c  crc.c  kfifo.c  observer.c  plog.c  ring_buffer.c  timer_ii.c  timer_list.c  workq.c  workq_.c  workqueue.c  xmodem.c  xmodem_old.c
embeded/rtems/component/lib/: BUILD.gn  xyz_modem.c
embeded/rtems/component/lib/libdsp/: BUILD.gn  lib_foc.c  lib_foc_b16.c  lib_misc.c  lib_misc_b16.c  lib_motor.c  lib_motor_b16.c  lib_observer.c  lib_observer_b16.c  lib_pid.c  lib_pid_b16.c  lib_pmsm_model.c  lib_pmsm_model_b16.c  lib_svm.c  lib_svm_b16.c  lib_transform.c  lib_transform_b16.c
embeded/rtems/component/lib/tool/: ymodem.h
embeded/rtems/component/lvgl/: BUILD.gn  lvgl_rtems.c
embeded/rtems/component/utils/: BUILD.gn
embeded/rtems/component/utils/ymodem/: ry_sy.c  ymodem.c
embeded/rtems/component/utils/zmodem/: rz.c  zcore.c  zdef.h  zdevice.c
embeded/rtems/include/: asm
embeded/rtems/include/base/: base.h  bitops.h  circ_buffer.h  compiler.h  crc.h  dsp.h  dspb16.h  fixedmath.h  generic.h  hash.h  hashtable.h  ilog2.h  init.h  kfifo.h  list.h  log.h  macros.h  minmax.h  observer.h  ring_buffer.h  sections.h  timer_ii.h  timer_list.h  types.h  workqueue.h  xyz_modem.h  ymodem.h
embeded/rtems/include/base/toolchain/: compiler_types.h
embeded/rtems/include/base/utils/: util_internal.h  util_loops.h  util_macro.h
embeded/rtems/include/bsp/: asm  board  byteorder.h  dmad.h  gpiod.h  i2cd.h  init.h  io.h  platform_bus.h  spid.h  sysconf.h  timlib.h  unwarminder.h  unwind.h  vdma.h
embeded/rtems/include/component/: bitops.h  callpath.h  circ_buf.h  compiler-gcc.h  compiler.h  compiler_types.h  crc.h  findbit.h  hash.h  hashtable.h  ilog2.h  list.h  minmax.h  ring_buffer.h  util_internal.h  util_macro.h  vdma.h  workq.h  workq_.h  workqueue.h
embeded/rtems/include/devfs/: led.h
embeded/rtems/include/drivers/: can.h  clock.h  devbase.h  display.h  dma.h  gpio.h  i2c.h  led.h  mio.h  ofw_platform_bus.h  pinctrl.h  platform_bus.h  spi.h
embeded/rtems/include/drivers/mmc/: mmc_base.h  mmc_bus.h  mmc_host.h  mmc_ops.h  mmc_sd.h  mmc_specs.h  sdhci.h
embeded/rtems/include/dt-bindings/pinctrl/: stm32-pinctrl-common.h  stm32-pinctrl.h
embeded/rtems/include/ofw/: ofw_extension.h
embeded/rtems/include/shell/: shell_utils.h  shell_vt100.h
embeded/rtems/init/: init.c
embeded/rtems/shell/: BUILD.gn  shell.c  shell_backtrace.c  shell_bsd.c  shell_disk.c  shell_dl.c  shell_gtest.c  shell_media.c  shell_mem.c  shell_misc.c  shell_sync.c  shell_xecho.c  shell_xyzmodem.c
embeded/rtems/testsuite/: BUILD.gn  func_unit_test.c  test_main.cc  timlib_unit_test.cc  tpic2810_unit_test.cc  workqueue_unit_test.cc  workqueue_unittest.c
embeded/rtems/testsuite/rap/: BUILD.gn  test_1.c
gn/: BUILD.gn  BUILDCONFIG.gn  common.gni  custom_toolchain.gni
gn/config/: BUILD.gn
gn/toolchain/: gcc_link_wrapper.py  gcc_toolchain.gni  pkg-config.py  pkg_config.gni
gn/toolchain/linux/: BUILD.gn
gn/toolchain/rtems/: BUILD.gn  configure.py  finder.py  rtems.gni
gn/utils/: BUILD.gn  mkimage.gni  mkimage.py  objcopy.gni  pkg-config.py  rap.gni  rap.py  rap_linker.py  shell.py
tools/: BUILD.gn
tools/scripts/: cpp_parser.py  gn_sources.py  mkimage.py  objcopy.py
tools/utils/ymodem/: ry_sy.c  ymodem.c  ymodem.h
(+35 files in other folders)
