import("//gn/common.gni")
import("//gn/toolchain/pkg_config.gni")

pkgargs = [
  "arm-rtems6-realview_pbx_a9_qemu",
  "--path","/home/wt/development/rtems/6/arm-rtems6/realview_pbx_a9_qemu"
]

pkgresult = exec_script("//gn/toolchain/rtems/finder.py", pkgargs, "value")
print("Result: ${pkgresult}")

# Top-level project target
group("project") {
  deps = [
 #   "//arch:preprocess",
    ":kernel"
  ]
  if (use_bin) {
    deps += ["//arch:binary"]
  }
  if (use_uboot) {
    deps += ["//arch:image"]
  }
}

# Global include directories
config("settings") {
  include_dirs = []
  cflags = [
     "-Wall", 
     "-Og", 
     "-g"
  ]
  cflags_c = [
     "-std=gnu11"
  ]
  cflags_cc = [
     "-std=c++17"
  ]
}

# Generate executable target
executable("kernel") {
  sources = [
    "main.c"
  ]
}

# pkg_config("cpu_abi") {
#   packages = [ "arm-rtems6-realview_pbx_a9_qemu" ]
#   ignore_libs = true

  
# }