import("//gn/common.gni")
import("//gn/utils/pkg_config.gni")

# Top-level project target
group("project") {
  deps = [
 #   "//arch:preprocess",
    ":kernel"
  ]
  if (use_bin) {
    deps += ["//arch:binary"]
  }
  if (use_uboot) {
    deps += ["//arch:image"]
  }
}

# Generate executable target
executable("kernel") {
  sources = [
    "init.c"
  ]
}

# pkg_config("cpu_abi") {
#   packages = [ "arm-rtems6-realview_pbx_a9_qemu" ]
#   ignore_libs = true

  
# }