import("//gn/toolchain/rtems/rtems.gni")


is_rtems = target_os == "rtems"

if (is_rtems) {
  import("//gn/toolchain/rtems/rtems.gni")
}

#========================
# Global flags
#========================
config("global_defines") {
  defines = [
    "__KERNEL__"
  ]
  if (use_libbsd) {
    defines += ["__rtems_libbsd__"]
  }
}

#========================
# compiler
#========================
config("compiler") {
  asmflags = []
  cflags = []
  cflags_c = []
  cflags_cc = []
  cflags_objc = []
  cflags_objcc = []
  ldflags = []
  defines = []
  configs = []

  configs += [
 #   "//arch:compiler_cpu_abi",
  ]
}

#========================
# rtti
#========================
config("no_rtti") {
  cflags_cc = [ "-fno-rtti" ]
}

#========================
# exceptions
#========================
config("no_exceptions") {
  cflags_cc = [ "-fno-exceptions" ]
}

#========================
# optimize
#========================
config("optimize") {

  cflags = ["-${optimize_level}"]
  if (is_debug) {
    cflags += ["-g"]
  }
}

