#========================
# CC options
#========================
config("cc_options") {
  cflags_cc = [ 
    "-fno-rtti",
    "-fno-exceptions"
  ]
}

#========================
# Optimize
#========================
config("optimize") {

  cflags = ["-${optimize_level}"]
  if (is_debug) {
    cflags += ["-g"]
  }
}
