#Common arguments declare

declare_args() {
  #Generate binary file
  use_bin = false
  
  #Generate uboot image
  use_uboot = false
}

declare_args () {
  custom_toolchain = ""
  toolchain_prefix = ""
  
  # 
  # Compiler options
  # 
  # compiler_cflags: common options
  # compiler_cflags_c: c options
  # compiler_cflags_cc: c++ options
  #
  compiler_cflags = ""
  compiler_cflags_c = ""
  compiler_cflags_cc = ""
  compiler_ldflags = ""
}
