#Common arguments declare

declare_args() {
  # Target SoC 
  target_soc = ""

  # Target Board
  target_board = ""
}

declare_args() {
  #Generate binary file
  use_bin = false
  
  #Generate uboot image
  use_uboot = false

  #Enable LVGL graphic libary
  use_gui = false

  #Enable libmodbus 
  use_libmodbus = false

  #Enable unit testcase
  use_testsuite = false
}

declare_args () {
  custom_toolchain = ""
  
  # 
  # Compiler options
  # 
  # compiler_cflags: common options
  # compiler_cflags_c: c options
  # compiler_cflags_cc: c++ options
  #
  compiler_cflags = ""
  compiler_cflags_c = ""
  compiler_cflags_cc = ""
  compiler_ldflags = ""
}
