# Make rootfs for rtems
action("preprocess") {
  rootfs_path = rebase_path("//embeded/rootfs")
  outpath = rebase_path("${root_out_dir}")
  script = "//gn/utils/shell.py"
  outputs = ["${root_out_dir}/rootfs.c"]
  args = [
    "tar -cf ${outpath}/rootfs.tar -C ${rootfs_path} --exclude BUILD.gn .",
    "rtems-bin2c -N __rootfs_image  -C ${outpath}/rootfs.tar ${outpath}/rootfs"
  ]
}

component("rootfs") {
    sources = [
        "${root_out_dir}/rootfs.c"
    ]
    public_deps = [":preprocess"]
}