# Make rootfs for rtems
import ("//gn/common.gni")

action("preprocess") {
  base_path = rebase_path("//embeded/rtems/bsps")
  outpath = rebase_path("${root_out_dir}")
  script = "//gn/utils/shell.py"
  outputs = ["${root_out_dir}/rootfs.tar"]
  args = [
    "cp -Rv ${base_path}/${target_cpu}/${target_board}/rootfs ${outpath}",
    "tar -cf ${outpath}/rootfs.tar -C ${outpath}/rootfs  ."
  ]
}

component("rootfs") {
    incdirs = rebase_path("$root_out_dir")
    include_dirs = ["-I ${incdirs}"]
    sources = [
        "rootfs.S"
    ]
    public_deps = [":preprocess"]
}