# Copyright (c) 2013 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.


config("feature_flags") {
  defines = []
}

# Debug/release ----------------------------------------------------------------
config("debug") {
  defines = []
}

config("release") {
  defines = [ "NDEBUG" ]
}

config("default_libs") {
  libs = []
}

config("shared_library_config") {
  
}