import("//gn/common.gni")

template("objcopy") {
    if (defined(invoker.format)) {
        format = invoker.format
    } else {
        format = "binary"
    }
    action(target_name) {
        script = "//tools/scripts/objcopy.py"
        sources = ["$root_out_dir/kernel.elf"]
        outputs = ["$root_out_dir/kernel.bin"]
        args = [
            "--objcopy", "${toolchain_prefix}objcopy",
            "--output_format","${format}",
            "--input_file",rebase_path("${root_out_dir}/kernel.elf")
        ]
        deps = invoker.deps
    }
}
