import("//gn/common.gni")

template("objcopy") {
    assert(defined(invoker.input))
    assert(defined(invoker.toolchain_prefix))
    if (defined(invoker.format)) {
        format = invoker.format
    } else {
        format = "binary"
    }
    objfile = invoker.input
    toolchain_prefix = invoker.toolchain_prefix
    action(target_name) {
        script = "//gn/utils/objcopy.py"
        sources = ["$root_out_dir/${objfile}.elf"]
        outputs = ["$root_out_dir/${objfile}.bin"]
        args = [
            "--objcopy", "${toolchain_prefix}objcopy",
            "--output_format","${format}",
            "--input_file",rebase_path("${root_out_dir}/${objfile}.elf")
        ]
        deps = invoker.deps
    }
}
